--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ matplotlib==3.7.2
 tensorflow==2.13.0
 seaborn==0.12.2
 streamlit_extras==0.3.2
-
+plotly==5.13.1
+pandas_ta==0.3.14b0
 #pandas_profiling==3.6.6
 
